# buck

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  Untitled.ipynb  genindex.html  graphics.pptx  index.html  major_net.xlsx  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/development/contributing/: internals.doctree  workflow.doctree
.doctrees/modules/: analysis.doctree  data.doctree  utils.doctree
.github/workflows/: changelog-ci.yml  ci.yaml
ML-Earth/: Outline.docx  claude-copy.tex  claude_writeup.aux  claude_writeup.bbl  claude_writeup.blg  claude_writeup.dvi  claude_writeup.out  claude_writeup.tex  claude_writeup_2.tex  cover_letter.tex  iopbib-new.bib  iopbib.bib  iopjournal-template.aux  iopjournal-template.bbl  iopjournal-template.blg  iopjournal-template.dvi  iopjournal-template.out  iopjournal-template.tex  iopjournal.cls
development/contributing/: internals.html  workflow.html
docs/source/: conf.py
examples/: (round 3) multi-architecture.ipynb  (round 4) multi-architecture.ipynb  (round 5) website_analysis.ipynb  250813_color_NDA.ipynb  250813_color_all.ipynb  250813_grayscale_nda.ipynb  250813_nda_all.ipynb  250819_optimize_color_NDA.ipynb  250820_False_color.ipynb  250820_optimize_single_model_for_all.ipynb  250820_optimize_single_model_for_all_NDA.ipynb  250828_fish_for_80  250828_fish_for_80 (DESKTOP-JRRCUE6's conflicted copy 2025-09-10 1).ipynb  250828_fish_for_80 (DESKTOP-JRRCUE6's conflicted copy 2025-09-10).ipynb  250828_fish_for_80.ipynb  250829_optimize_single_model_for_all (DESKTOP-JRRCUE6's conflicted copy 2025-09-10).ipynb  250829_optimize_single_model_for_all.ipynb  250911_fish_for_80.ipynb  251008 - all image - state_date.ipynb  251008 - all image.ipynb  AllEncompassing.ipynb  Basic (Conv. Neural Net).ipynb  Basic (functioned).ipynb  Basic (simplified).ipynb  Basic CNN.ipynb  Basic_CNN.ipynb  Border removed.ipynb  CNN.ipynb  CUDA - more features.ipynb  Classifiers (bludgeon).ipynb  Drew_augmentation.ipynb  EfficientNet (GPU).ipynb  False coloration.ipynb  Optimize all.ipynb  RGB_and_color.ipynb  RGB_and_grayscale.ipynb  RTX5090 - setup.ipynb  RandomForest - all_photos.ipynb  RandomForest.ipynb  ResNet-50 (GPU) (round 2).ipynb  (+6 more)
examples/(teeth) academic_ensemble_20250721_081845 (90.7 +- 2.6%)/: Final tooth aging script.ipynb
examples/color_model_characterization/: architecture_statistics.csv
examples/model_characterization/: model_performance_results.csv
images/: image_metadata.csv
jawbone/examples/: 251023 - teeth - single_model.ipynb  teeth - 2.ipynb
modules/: analysis.html  data.html  utils.html
src/buck/analysis/: basics.py  (+1 more)
tooth_analysis/: Age histogram.xlsx  ~$Paper images.pptx
trail cam/: image_metadata.csv
trail cam/examples/: (round 3) multi-architecture.ipynb  (round 5) website analysis.ipynb  250813_color_NDA.ipynb  250813_color_all.ipynb  250813_grayscale_all.ipynb  251008 - all image - state_date.ipynb  251008 - all image.ipynb  Analyze_efficientnet_model.ipynb  Basic CNN.ipynb  RGB_and_grayscale.ipynb  ResNet-50 (GPU).ipynb  Statistics.ipynb  Validate model geometry.ipynb  trailcam - image_overlap.ipynb
(+30 files in other folders)
